syntax = "proto3";

package greet;

option go_package = "unary/greet/greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest { Greeting greeting = 1; }

message GreetWithDeadlineRequest { Greeting greeting = 1; }

message GreetWithDeadlineResponse { string response = 1; }

message GreetResponse { string result = 1; }
service GreetService {
  // unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};
  // unary with Deadline
  rpc GreetWithDeadline(GreetWithDeadlineRequest)
      returns (GreetWithDeadlineResponse) {};
}
